perf(workers): default to the JVM's own collector instead of pinning ZGC
Short-lived worker JVMs pay ZGC's startup tax on every fork, and ZGC halves
the worker AOT-cache win (its barriers change what the cache can map, and it
skips the archived heap). The idle-uncommit behavior ZGC was picked for
barely matters for processes that exit in seconds — and the resident
processes that DO idle (engine, trainer) already pin SerialGC explicitly.

- DEFAULT_GC = "default": no -XX:+Use*GC flag; the JVM picks (G1 on
  server-class machines). `[jvm] gc = "zgc"|"g1"` still pins explicitly,
  and an explicit zgc keeps ZUncommit + the aggressive uncommit delay.
- Unrecognized gc names no longer coerce to ZGC — leave the JVM default.
- SoftMaxHeapSize is now emitted for everything except an explicit
  gc = "none": G1 and ZGC honour it, every other collector recognizes and
  ignores it (it is heap-plan sizing, like -Xmx, not collector selection).
- String deduplication stays gated on an explicit g1/zgc pin (pre-JDK-18
  project toolchains reject it under other collectors).

WorkerAot keys carry the GC name, so the switch mints new keys and retrains
automatically; old caches are swept on publish. Measured per real
single-file recompile through `jk build` (Temurin 25.0.3), trained + new
default vs the ZGC numbers from the previous commit:
java 236ms -> 172ms (292ms untrained ZGC baseline); kotlin 1248ms -> 960ms
(2155ms untrained ZGC baseline).